start in Hero section

--- a/index.html
+++ b/index.html
@@ -10,10 +10,22 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&family=Jersey+15&family=Sedgwick+Ave&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+<!-- bangla -->
+<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Bengali:wght@100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
+
 </head>
 <style>
   footer{
     font-family: "Sedgwick Ave", cursive;
+  }
+  .body{
+    font-family: "Outfit", sans-serif;
+
+  }
+  .bangla{
+    font-family: "Noto Sans Bengali", sans-serif;
   }
 </style>
 
